--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 #for cpu
 # torch==0.3.0.post4
 #for g4 gpu
-torch==1.5.0+cu92
+# torch==1.5.0+cu92
+torch==1.4.0
 scikit-image==0.14.5
-
-
-
+opencv-python-headless==4.1.0.25
+#if error in installation of torch do
+# pip install future
